# Process this file with autoconf to produce a configure script.

AC_INIT(concur.h, 2.0)
AC_SUBST(ac_aux_dir)
AC_PREFIX_DEFAULT(/usr/local)
AM_INIT_AUTOMAKE( concur, 2.0 )

sinclude([local.m4])

AC_PROG_CC
AM_PROG_LIBTOOL

AC_DEFINE(_POSIX_PTHREAD_SEMANTICS, 1, [Use POSIX threads])
AC_DEFINE(_REENTRANT, 1, [Generate re-entrant code])

AC_CHECK_HEADERS(malloc.h)

AC_CHECK_FUNCS([malloc_size malloc_good_size memalign posix_memalign reallocf valloc pvalloc cfree mallinfo mallinfo_heap mallopt malloc_trim malloc_usable_size malloc_get_state malloc_set_state __malloc_check_init __default_morecore])
AC_OUTPUT( Makefile )
